RESOLVED FIXED169517
REGRESSION (r211382): Partial right-to-left text runs are painted at an offset (breaks Find indicators, Look Up, and custom ::selection style)
https://bugs.webkit.org/show_bug.cgi?id=169517
Summary REGRESSION (r211382): Partial right-to-left text runs are painted at an offse...
mitz
Reported 2017-03-11 20:20:43 PST
To reproduce this bug, navigate to the URL and then control-click the long word on the left, and choose Look Up “הסתבכויות” from the contextual menu. In the yellow lookup highlight, the word is offset to the right but about the width of the other word.
Attachments
Patch (4.57 KB, patch)
2017-05-01 23:26 PDT, Myles C. Maxfield
no flags
Archive of layout-test-results from ews126 for ios-simulator-wk2 (11.30 MB, application/zip)
2017-05-02 01:03 PDT, Build Bot
no flags
Patch (5.41 KB, patch)
2017-05-02 10:19 PDT, Myles C. Maxfield
no flags
Patch (5.30 KB, patch)
2017-05-02 10:36 PDT, Myles C. Maxfield
no flags
Radar WebKit Bug Importer
Comment 1 2017-03-11 20:25:59 PST
mitz
Comment 2 2017-03-11 21:10:39 PST
I am pretty sure this was caused by the changes to FontCascade in r211382, but I haven’t confirmed it yet.
mitz
Comment 3 2017-03-11 22:01:27 PST
mitz
Comment 4 2017-03-13 19:26:30 PDT
Here is a test case you can use that doesn’t depend on lookup: <style> ::selection { color: green; } </style> <bdo id=target dir=rtl>neerg si noitceleS</bdo> <script> let textNode = document.getElementById("target").firstChild; getSelection().setBaseAndExtent(textNode, 0, textNode, 5) </script>
Tim Horton
Comment 5 2017-03-28 12:01:31 PDT
Radar is actually rdar://problem/30652443
Myles C. Maxfield
Comment 6 2017-05-01 23:26:26 PDT
Build Bot
Comment 7 2017-05-02 01:03:11 PDT
Comment on attachment 308803 [details] Patch Attachment 308803 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3656252 New failing tests: fast/text/complex-text-selection.html
Build Bot
Comment 8 2017-05-02 01:03:12 PDT
Created attachment 308809 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 9 2017-05-02 10:19:43 PDT
Myles C. Maxfield
Comment 10 2017-05-02 10:36:54 PDT
WebKit Commit Bot
Comment 11 2017-05-02 12:35:28 PDT
Comment on attachment 308831 [details] Patch Clearing flags on attachment: 308831 Committed r216088: <http://trac.webkit.org/changeset/216088>
WebKit Commit Bot
Comment 12 2017-05-02 12:35:30 PDT
All reviewed patches have been landed. Closing bug.
Jon Lee
Comment 13 2017-05-04 15:25:42 PDT
*** Bug 171658 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.